all the page fix in initialization align with the current project

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
   --color-card-foreground: var(--card-foreground);
   --color-popover: var(--popover);
   --color-popover-foreground: var(--popover-foreground);
-  --color-primary: #11a8a5;
+  --color-primary: #0041d9;
   --color-primary-dark: #161616;
   --color-green-50: #e7f6f6;
   --color-primary-foreground: var(--primary-foreground);
